# logentia

./: CMakeLists.txt  README.md  install.sh  typescript
cmake/: logentiaConfig.cmake.in
demo/: CMakeLists.txt  logentia.conf  main.cpp
inc/: config.hpp  defaults.hpp  logentia.hpp
src/: config.cpp  logentia.cpp
